# aloud

./: README.md  pyproject.toml
.ipython/: extensions  ipython_config.py  ipython_kernel_config.py
.ipython/startup/: extensions.ipy
aloud/: __init__.py  cli_utils.py  console.py  main.py  models.py  oai.py  oai.pyi  settings.py  text.py  thread_pool_executor.py  util.py  vision.py  yaml.py
aloud/convert/: __init__.py  to_audio.py  to_html.py  to_markdown.py  to_speakable.py  tomd.py
aloud/convert/to_markdown/: __init__.py  article_trimming.py  from_html.py  to_markdown.py  to_markdown.pyi
aloud/convert/to_markdown/prompts/: __init__.py  find_first_post_title_article_line.yaml  find_first_real_article_line.yaml  find_last_real_article_line.yaml  prompts.py
aloud/convert/to_speakable/: __init__.py  to_speakable.py
aloud/load/: load.py
aloud/scheme/: __init__.py  chat_prompt.py  chat_prompt.pyi
schemas/: create-chat-completion-request.json  models.py
scripts/: debug.py  generate_models.py
tests/: conftest.py  test_to_markdown.py
tests/code_documentation/: langchain_web_based_doc_loader.md  langchain_web_based_doc_loader.py
tests/data/agis-impact-on-tech-saas-valuations/: agis-impact-on-tech-saas-valuations.html  agis-impact-on-tech-saas-valuations.md  agis-impact-on-tech-saas-valuations.txt
tests/data/best-interview-question/: best-interview-question.html  best-interview-question.url
tests/data/big-ideas-in-tech-2024/: big-ideas-in-tech-2024.html
tests/data/introducing-byfrost-a-source-code-path-visualizer/: introducing-byfrost-a-source-code-path-visualizer.html
tests/data/openais-misalignment-and-microsofts-gain/: openais-misalignment-and-microsofts-gain.html  openais-misalignment-and-microsofts-gain.md  openais-misalignment-and-microsofts-gain.txt
tests/data/promptlayer/: promptlayer.html  promptlayer.md  promptlayer.txt
tests/data/q-star/: q-star.html  q-star.md  q-star.txt
tests/data/reshaping-the-tree-rebuilding-organizations/: reshaping-the-tree-rebuilding-organizations.md  reshaping-the-tree-rebuilding-organizations.raw.md
tests/data/the-roots-of-modern-backend-engineering-practices/: the-roots-of-modern-backend-engineering-practices.html  the-roots-of-modern-backend-engineering-practices.md  the-roots-of-modern-backend-engineering-practices.txt
tests/integration/: conftest.py
tests/integration/links_and_images/: interconnects_q_star.py  reshaping-the-tree-rebuilding-organizations.py
tests/integration/links_images_and_gif/: codegen_raises_new_capital_llm_automation_for_software_dev.py
tests/integration/long_web_articles/: big_ideas_in_tech_2024.py
tests/integration/low_code_some_images/: github_code_search_technology_behind.html
tests/integration/simple_html_some_images/: how_to_prepare_a_talk.html  how_to_prepare_a_talk.py  how_to_prepare_a_talk.speakable
tests/integration/simplest_html_title_and_text/: we_are_drowning_in_googles_magnanimity.py  we_are_drowning_in_googles_magnanimity.speakable
tests/integration/titles_images_and_youtube_embed/: test_introducing_byfrost_a_source_code_path_visualizer.py
tests/links_and_images/: interconnects_q_star.md  interconnects_q_star.py
tests/links_and_images/reshaping-the-tree-rebuilding-organizations/: reshaping-the-tree-rebuilding-organizations.html  reshaping-the-tree-rebuilding-organizations.md  reshaping-the-tree-rebuilding-organizations.py  reshaping-the-tree-rebuilding-organizations.txt
tests/links_images_and_gif/: codegen_raises_new_capital_llm_automation_for_software_dev.py
tests/low_code_some_images/: github_code_search.py  github_code_search_technology_behind.html  github_code_search_technology_behind.py
tests/simple_html_some_images/: how_to_prepare_a_talk.md  how_to_prepare_a_talk.py  how_to_prepare_a_talk.speakable
tests/simplest_html_title_and_text/: we_are_drowning_in_googles_magnanimity.py
tests/titles_images_and_youtube_embed/: test_introducing_byfrost_a_source_code_path_visualizer.py
tests/unit/: conftest.py  test_cli_utils.py  test_text.py  test_to_markdown.py  test_to_markdown_from_html.py  test_to_markdown_prompts.py  test_vision.py
tests/wiki/: puccini.py
